--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mohamed-khaled11.github.io/Movies-App/",
+  "homepage": "https://mohamed-khaledes.github.io/Movies-App/",
   "name": "movies-app",
   "version": "0.1.0",
   "private": true,
