adding the test and some of updates

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "jest-fixed-jsdom": "^0.0.9",
+    "msw": "^2.7.0",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.7.2",
@@ -21,6 +23,9 @@
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
+    "text-encoding": "^0.7.0",
+    "undici": "^7.2.0",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,6 +55,13 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "babel-jest": "^29.7.0",
+    "gh-pages": "^4.0.0",
+    "jest": "^29.7.0"
+  }
+  , "transform": {
+    "^.+\\.js$": "babel-jest"
   }
 }
